--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -5,10 +5,7 @@ annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=Tanks
 application.vendor=Peter
-<<<<<<< Updated upstream
-=======
 auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
->>>>>>> Stashed changes
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -79,6 +76,7 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=JDK_1.8
+platforms.JDK_1.8.home=/usr/lib/jvm/jdk1.8.0/bin/java
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
