--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -76,7 +76,7 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=JDK_1.8
-platforms.JDK_1.8.home=/usr/lib/jvm/jdk1.8.0/bin/java
+platforms.JDK_1.8.home=/usr/lib/jvm/jdk1.8.0
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
